refactor: 응답 구성 커스텀
