# src/routes/search.routes.js
@@ -3,6 +3,7 @@ import {
   search,
   getAllDocs,
   getAllDocs2,
+  getAllDocs3,
 } from "../controllers/search.controller.js";
 
 const router = express.Router();
@@ -12,5 +13,7 @@ router.get("/search", search);
 router.get("/indices/scholarship", getAllDocs);
 
 router.get("/indices/scholarship2", getAllDocs2);
+
+router.get("/indices/scholarship3", getAllDocs3);
 
 export default router;
